--- a/static/css/build.css
+++ b/static/css/build.css
@@ -617,6 +617,11 @@ nav a {
 
 /* Prose styles for blog content */
 
+.prose {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
 .prose h1 {
   margin-bottom: 1.5rem;
   font-size: 1.875rem;
@@ -655,8 +660,6 @@ nav a {
 
 .prose p {
   line-height: 1.625;
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .prose ul {
